Fix output overflow/wrapping

--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body {
     background: #F7F7F7;
     color: #000;
     padding: .5em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     border-radius: .25em .25em .1em .1em;
     box-shadow:
         inset 0 0 .3em .05em #888,
